--- a/docs/style.css
+++ b/docs/style.css
@@ -7,6 +7,7 @@
 	--secondary-dark: #1e2022;
 	--secondary-hover: #34383d;
 	--accent: #6b1a5b;
+	--f-outfit: "Outfit", sans-serif;
 }
 
 a {
@@ -15,7 +16,8 @@ a {
 }
 
 main {
-	max-width: 600px;
+	max-width: 640px;
+	padding: inherit 20px;
 	margin: auto;
 }
 
@@ -24,24 +26,23 @@ html {
 	color: var(--text);
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3 {
 	text-align: center;
-	font-family: "Outfit", sans-serif;
+	font-family: var(--f-outfit);
 }
 
-h1:hover, h2:hover, h3:hover, h4:hover, h5:hover, h6:hover {
+h1:hover, h2:hover, h3:hover {
 	cursor: default;
 }
 
 h1.title {
+	margin-bottom: 0;
 	font-weight: 900;
 	font-size: 64pt;
-	margin-bottom: 0;
 }
 
 h2.subtitle {
-	margin-top: 0;
-	margin-bottom: 24pt;
+	margin: 0 inherit 24pt;
 	font-weight: 600;
 	font-size: 24pt;
 }
@@ -61,7 +62,7 @@ button {
 	border-width: 0px;
 	border-radius: 8px;
 	padding: 10px 20px;
-	font-family: "Outfit", sans-serif;
+	font-family: var(--f-outfit);
 	font-weight: 500;
 	font-size: 12pt;
 	background-color: var(--secondary);
