--- a/docs/style.css
+++ b/docs/style.css
@@ -45,12 +45,16 @@ footer {
 	width: 460px;
 	margin-top: 24pt;
 	padding-top: 12pt;
-	border-top: 1px solid var(--secondary-light1);
+	border-top: 1px solid var(--secondary);
 	color: var(--secondary-light2);
 	text-align: center;
 	font-family: var(--f-outfit);
-	font-weight: 200;
-	font-size: 11pt;
+	font-weight: 300;
+	font-size: 10pt;
+}
+
+footer a:hover {
+	text-decoration: underline;
 }
 
 h1, h2, h3 {
@@ -163,4 +167,11 @@ button.secondary:active {
 	width: 100%;
 	display: block;
 	margin: 8px 0;
+}
+
+.inline-img {
+	display: inline;
+	margin: 0 0.1em -0.33em 0;
+	padding: 0;
+	vertical-align: text-bottom;
 }
