--- a/docs/style.css
+++ b/docs/style.css
@@ -32,7 +32,9 @@ html {
 }
 
 header, main, footer {
-	max-width: 560px;
+	min-width: 320px;
+	max-width: 100%;
+	width: 560px;
 	padding: inherit 20px;
 	margin: 0 auto;
 }
@@ -174,4 +176,15 @@ button.secondary:active {
 	margin: 0 0.1em -0.33em 0;
 	padding: 0;
 	vertical-align: text-bottom;
+}
+
+@media (max-width: 440px) {
+	h1.title {
+		font-weight: 900;
+		font-size: 52pt;
+	}
+	
+	h2.subtitle {
+		font-size: 19.5pt;
+	}
 }
